<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 Christopher Fung.
  ~ All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.AddIngredientsActivity">

    <TextView
        android:id="@+id/text_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_ingredients_heading"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

        <LinearLayout
            android:id="@+id/linear_layout_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/text_heading">

            <EditText
                android:id="@+id/edit_text_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/add_ingredients_hint_search"
                android:inputType="text"
                android:layout_weight="0.9"/>

            <Button
                android:id="@+id/btn_search"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/add_ingredients_btn_search"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:background="@color/colorPrimary"
                android:layout_marginLeft="2dp"
                android:layout_weight="0.1"/>

        </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_search_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:cardElevation="2dp"
        android:layout_below="@+id/linear_layout_search"
        style="@style/IngredientsSearchResultsTheme">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_ingredient_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"/>

        <ProgressBar
            android:id="@+id/progress_ingredient_result"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_no_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_ingredients_no_results"
            android:textSize="16sp"
            android:visibility="gone"/>

    </android.support.v7.widget.CardView>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view_ingredients_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_search"
        android:layout_above="@+id/linear_layout_cancel_add"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border_black_lists">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"/>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/linear_layout_cancel_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ingredients_btn_clear"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_marginRight="2dp"/>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ingredient_btn_save"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="2dp"/>
    </LinearLayout>

</RelativeLayout>