<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 Christopher Fung.
  ~ All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/text_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/main_heading"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

    <RelativeLayout
        android:id="@+id/relative_layout_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_heading"
        android:layout_above="@id/linear_layout_clear_add">

        <!--<ImageButton-->
            <!--android:id="@+id/btn_speech_activation"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:src="@drawable/ic_mic_white"-->
            <!--android:background="@drawable/btn_round_turquoise"/>-->

        <TextView
            android:id="@+id/text_ingredients_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/main_ingredients_heading"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll_view_ingredients_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text_ingredients_heading"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_black_lists">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"/>

        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_layout_clear_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/linear_layout_settings_search"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/main_btn_clear"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:background="@color/colorPrimary"
            android:layout_marginRight="2dp"/>
        <Button
            android:id="@+id/btn_add"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/main_btn_add"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_settings_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_settings"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_marginRight="2dp"/>
        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_search"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="2dp"/>
    </LinearLayout>
</RelativeLayout>